tests/integration/security/test_artifacts/security-a995fce91cf649b097c94d/TestMutualTlsOrigination/no_client_certs/_test_context/DestinationRule.3844149634.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-tls-credential-simple
spec:
  host: "external.external-4-16320.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: tls-credential-simple
          sni: external.external-4-16320.svc.cluster.local
